2007-11-05  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/gtk_docs_override.xml: Made changes to the gtk_dialog_run() 
	override to avoid strange markup in the generated HTML.
	Bug #471143 (Andrew Medico)
	* gtk/src/gtk_signals.defs: Corrected the GtkWidget:grab-broken-event 
	definition to fix the build after my previous commit.

2007-11-05  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/widget.hg: Added the grab_broken_event signal 
	(with no_default_handler, to preserve ABI).
	Bug #473465 (Balazs Scheidler).

2007-11-05  Yevgen Muntyan  <muntyan@tamu.edu>

	* tools/extra_defs_gen/generate_defs_gtk.cc: Added ifdefs around the 
	unix-specific printer objects, to fix the build on Windows.

2007-11-05  Murray Cumming  <murrayc@murrayc.com>

	* gdk/src/drawable.hg: Added a const overload of get_size() 
	and deprecated the non-const version.
	Bug #467539 (Bobby DaSilva).

2007-11-05  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/widget.hg: Added the popup_menu signal, 
	without a overridable default signal handler (to preserve ABI), 
	now that we know that it is public API.
	Bug #304103 (Philip Langdale). 

2007-11-05  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/entrycompletion.hg: Added set_popup_single_match(), 
	deprecated the wrongly-named set_popup_single_width().
	Bug #473750 (Kevin Daughtridge).
	Added a const version of get_text_column() and deprecated the 
	non-const version.

2007-11-05  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/linkbutton.ccg:
	* gtk/src/linkbutton.hg: Partially hand-code one of the 
	constructors, so it can pass the uri for the label too, 
	as in gtk_link_button_new(). Bug #492200 (Marko Anastasov).

2007-11-04  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/widget.hg: Change a Style to Gtk::Style in 
	a signal, to fix the build on MacOS X. Bug #493057.
	(Alberto Ruiz)
	* tools/m4/convert_gtk.m4:
	* gtk/src/style.hg: Moved some signal-specific conversions to 
	the .hg file, to avoid their misuse.
