@@ -1,3 +1,11 @@
+2007-11-05  Jonathon Jongsma  <jjongsma@gnome.org>
+
+	* docs/reference/Makefile.am: clean up the makefile rules for building the
+	devhelp files a bit so that it gets rebuilt if the xsl stylesheet changes,
+	etc.
+	* docs/reference/doxygen_to_devhelp.xsl: Fix the devhelp XSL stylesheet so
+	that the functions link correctly (fixes Bug #488261)
+
 2007-11-05  Murray Cumming  <murrayc@murrayc.com>
 
 	* gtk/src/gtk_docs_override.xml: Made changes to the gtk_dialog_run() 
